[package]
name = "dump-analyzer"
version = "0.1.0"
authors = ["Arkadiusz Guzinski <kermit@ag.de1.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
rustc-serialize = "*"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.*"
serde-big-array = "0.3.0"
array-init = "*"
walkdir = "2"
twoway = "*"