[package]
name = "dump-analyzer"
version = "0.1.0"
authors = ["Arkadiusz Guzinski <kermit@ag.de1.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
rustc-serialize = "*"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.*"
serde-big-array = "0.3.0"
array-init = "*"
walkdir = "2"
twoway = "*"
roxmltree = "0.14.0"
clap = "3.0.0-beta.2"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.*"
serde-big-array = "0.3.0"
rustc-serialize = "*"
